--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>cards</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but cards doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/cards/favicon.ico><title>cards</title><link href=/cards/css/app.9a691708.css rel=preload as=style><link href=/cards/js/app.402e6fe5.js rel=preload as=script><link href=/cards/js/chunk-vendors.9e6cc673.js rel=preload as=script><link href=/cards/css/app.9a691708.css rel=stylesheet></head><body><noscript><strong>We're sorry but cards doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/cards/js/chunk-vendors.9e6cc673.js></script><script src=/cards/js/app.402e6fe5.js></script></body></html>
